# glamdoll

./: .gitignore  CMakeLists.txt  README.md
glamdoll/shaders/: shader.vert
glamdoll/src/: main.cpp
include/: camera.h  cube.h  shader.h  vao.h  vbo.h
shaders/: shader.frag
src/: camera.cpp  main.cpp  shader.cpp  vao.cpp  vbo.cpp
